--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ feature_row:
     image_path: /assets/imgs/form_mm/unsplash-gallery-image-1-th.jpg
     alt: "placeholder image 1"
     title: "Research 1"
-  - url: "http://localhost:4000/blog/"
+  - url: "{{site.url}}/blog/"
     image_path: /assets/imgs/form_mm/unsplash-gallery-image-2-th.jpg
     alt: "placeholder image 2"
     title: "Research 2"
