created new theme

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@ layout: splash
 author_profile: false 
 title: "Something..."
 header:
-  overlay_color: "#000"
+  overlay_color: "rgb(61, 61, 61)"
   overlay_filter: "0.5"
-  overlay_image: "/assets/imgs/cd-art.jpg"
+  #overlay_image: "/assets/imgs/cd-art.jpg"
+  #caption: "create by: mrityunjay"
   actions:
     - label: "Download"
       url: "https://github.com/mmistakes/minimal-mistakes/"
-  caption: "create by: mrityunjay"
 intro: 
   - excerpt: 'Nullam suscipit et nam, tellus velit pellentesque at malesuada, enim eaque. Quis nulla, netus tempor in diam gravida tincidunt, *proin faucibus* voluptate felis id sollicitudin. Centered with `type="center"`'
 
@@ -19,7 +19,7 @@ feature_row:
     image_path: /assets/imgs/form_mm/unsplash-gallery-image-1-th.jpg
     alt: "placeholder image 1"
     title: "Research 1"
-  - url: "{{site.url}}/blog/"
+  - url: "/blog"
     image_path: /assets/imgs/form_mm/unsplash-gallery-image-2-th.jpg
     alt: "placeholder image 2"
     title: "Research 2"
@@ -30,8 +30,6 @@ feature_row:
 
 footer:
 ---
-
-
 
 <!-- {% for post in site.posts %}
     <li><a href="{{post.url}}">{{post.title}}</a></li>
