--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@ footer:
 <hr>
 
 
-{% include feature_row id="intro" type="center" %}
+{% comment %} {% include feature_row id="intro" type="center" %} {% endcomment %}
 
 <h2>Latest Posts</h2>
+
+
+
 {% include feature_row width="30%" %}
 
