--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 ---
 layout: splash 
 author_profile: false 
-title: "Something..."
+title: "Hi,My name is Mrityunjay"
 header:
   overlay_color: "rgb(61, 61, 61)"
   overlay_filter: "0.5"
   #overlay_image: "/assets/imgs/cd-art.jpg"
-  #caption: "create by: mrityunjay"
+  caption: "create by: mrityunjay"
   actions:
     - label: "Download"
       url: "https://github.com/mmistakes/minimal-mistakes/"
 intro: 
   - excerpt: 'Nullam suscipit et nam, tellus velit pellentesque at malesuada, enim eaque. Quis nulla, netus tempor in diam gravida tincidunt, *proin faucibus* voluptate felis id sollicitudin. Centered with `type="center"`'
 
-excerpt: "I love <i>**learning**</i> new things"
+excerpt: "I love <i>**learning**</i> new stuffs"
 feature_row:
   - url: ""
     image_path: /assets/imgs/form_mm/unsplash-gallery-image-1-th.jpg
@@ -28,20 +28,64 @@ feature_row:
     alt: "placeholder image 3"
     title: "Image 3 title caption"
 
-footer:
+feature_row2:
+  - image_path: /assets/imgs/form_mm/unsplash-gallery-image-2-th.jpg
+    alt: "placeholder image 2"
+    title: "Reprocussive Generation of Convoy's Game of Life"
+    excerpt: "Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, dolores sed repellendus molestiae tempora vel iusto similique? Libero nam sapiente at architecto, necessitatibus, numquam assumenda veritatis, corporis enim ex rem!"
+    url: "#test-link"
+    btn_label: "Read More"
+    btn_class: "btn--primary"
+
+feature_row3:
+  - image_path: /assets/imgs/form_mm/unsplash-gallery-image-2-th.jpg
+    alt: "placeholder image 3"
+    title: "About"
+    excerpt: "This is my Story <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, dolores sed repellendus molestiae tempora vel iusto similique? Libero nam sapiente at architecto, necessitatibus, numquam assumenda veritatis, corporis enim ex rem!"
+    url: "#"
+    btn_label: "Read More"
+    btn_class: "btn--primary"
+
 ---
 
 <!-- {% for post in site.posts %}
     <li><a href="{{post.url}}">{{post.title}}</a></li>
 {% endfor %} -->
-<hr>
 
+
+<style>
+  #feature_row_container{
+    padding: 0% 10%;
+  }
+
+  #main_about{
+    padding: 05% 05%;
+    background-color:gray;
+    border: 0;
+  }
+
+  #latest_post_container{
+    padding: 4% 10%;
+    margin: -2% 0%;
+  }
+</style>
 
 {% comment %} {% include feature_row id="intro" type="center" %} {% endcomment %}
 
-<h2>Latest Posts</h2>
+<h2>Latest Post</h2>
+
+<div id="latest_post_container">
+{% include feature_row id="feature_row2" type="right"%}
+</div>
+
+<div id="feature_row_container">
+{% include feature_row id="feature_row"%}
+</div>
 
 
+<!-- <h2>Portfolio:</h2>
+<div id="portfolio_container" style="height: 300px"></div> -->
 
-{% include feature_row width="30%" %}
-
+<div id="main_about">
+{% include feature_row id="feature_row3" type="left" %}
+</div>
