changed parimery-color, made consistent layout

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@ author_profile: false
 title: "Hi,My name is Mrityunjay"
 header:
   overlay_color: "rgb(61, 61, 61)"
-  #overlay_filter: "0.5"
-  #overlay_image: "/assets/imgs/landing-page-header-img/MainPageLayout.png"
+  #overlay_filter: "0.4"
+  #overlay_image: "/assets/imgs/hab-unsplash.jpg"
 intro: 
   - excerpt: 'Nullam suscipit et nam, tellus velit pellentesque at malesuada, enim eaque. Quis nulla, netus tempor in diam gravida tincidunt, *proin faucibus* voluptate felis id sollicitudin. Centered with `type="center"`'
 
 excerpt: "I love <i>**learning**</i> new stuffs"
 feature_row:
   - url: "/blog/artificial-intelligence/classical_ai.html"
-    image_path: /assets/imgs/posts_imgs/classical_ai/teaser/botvshuman.jpeg
+    image_path: /assets/imgs/posts_imgs/classical-ai/teaser/botvshuman.jpeg
     alt: "placeholder image 1"
     title: "Classical AI"
 
