added about and finished classical_ai

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ feature_row3:
   - image_path: /assets/imgs/site_imgs/pro_pic.jpg
     alt: "placeholder image 3"
     title: "About"
-    excerpt: "This is my Story <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, dolores sed repellendus molestiae tempora vel iusto similique? Libero nam sapiente at architecto, necessitatibus, numquam assumenda veritatis, corporis enim ex rem!"
+    excerpt: "I am basically an Explorer, I love learning new things espicially the ones that are related to technology, Art and Mathematics. and through this blog i'll try my best to share and explain any topics i've found intresting."
     url: "/about/"
     btn_label: "Read More"
     btn_class: "btn--primary"
