--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ intro:
 excerpt: "I love <i>**learning**</i> new stuffs"
 feature_row:
   - url: "/blog/artificial-intelligence/classical_ai.html"
-    image_path: /assets/imgs/posts_imgs/svm-with-smo-part-3/teaser/code_cc.jpeg
+    image_path: /assets/imgs/posts_imgs/classical-ai/teaser/botvshuman.jpeg
     alt: "placeholder image 1"
     title: "Classical AI"
 
@@ -96,9 +96,9 @@ feature_row3:
 
   }
   #visit_blog_btn:hover{
-    color: white;
-    background-color:gray;
-    border-color:gray;
+    color: var(--primary-color);
+    background-color:white;
+    border-color: var(--primary-color);
   }
 
 
